Thu Aug 11 09:07:19 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/data.c: improve test for ms date/time

Thu Aug 11 09:05:49 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/convert.c: consider time offset in tds_datecrack

Thu Aug 11 09:02:43 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/query.c: avoid c++ comments

Thu Aug 11 09:01:33 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/convert.c: small tds_datecrack fix

Wed Aug 10 10:03:11 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/query.c: make tds_put_data inline

Wed Aug 10 09:49:10 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/funccall.c: initialize variable

Wed Aug 10 09:47:22 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/data.c: support putting ms time/date

Wed Aug 10 09:45:01 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/data.c src/tds/query.c:
	- implement put_info as callback

Wed Aug 10 09:43:36 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/convert.c: fix date conversion precision

Wed Aug 10 09:42:16 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/data.c src/tds/query.c:
	- use callback for put_data

Wed Aug 10 09:41:23 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/data.c: avoid using union just to read some integer value

Wed Aug 10 09:40:16 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/data.c: check DATETIMEOFFSET values from server

Tue Aug  9 08:26:42 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/freetds_autobuild:
	- update autobuild using different position for working directory

Mon Aug  8 18:57:47 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/unittests/dynamic1.c: make dynamic1 test work again

Mon Aug  8 18:56:25 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>